--- a/Makefile.am
+++ b/Makefile.am
@@ -87,17 +87,23 @@ ccminer_LDFLAGS += -L/usr/local/llvm/lib
 ccminer_LDADD += -lomp
 endif
 
-nvcc_ARCH  = -gencode=arch=compute_61,code=sm_61
-nvcc_ARCH += -gencode=arch=compute_60,code=sm_60
-nvcc_ARCH += -gencode=arch=compute_52,code=sm_52
-nvcc_ARCH += -gencode=arch=compute_50,code=sm_50
-nvcc_ARCH += -gencode=arch=compute_37,code=sm_37
-nvcc_ARCH += -gencode=arch=compute_35,code=sm_35
-nvcc_ARCH += -gencode=arch=compute_30,code=sm_30
-nvcc_ARCH += -gencode=arch=compute_70,code=sm_70
+#nvcc_ARCH  = -gencode=arch=compute_61,code=sm_61
+#nvcc_ARCH += -gencode=arch=compute_60,code=sm_60
+#nvcc_ARCH += -gencode=arch=compute_52,code=sm_52
+#nvcc_ARCH += -gencode=arch=compute_50,code=sm_50
+#nvcc_ARCH += -gencode=arch=compute_37,code=sm_37
+#nvcc_ARCH += -gencode=arch=compute_35,code=sm_35
+#nvcc_ARCH += -gencode=arch=compute_30,code=sm_30
+#nvcc_ARCH += -gencode=arch=compute_70,code=sm_70
+
+nvcc_ARCH = -gencode=arch=compute_75,code=sm_75
+nvcc_ARCH += -gencode=arch=compute_86,code=sm_86
 
 nvcc_FLAGS = $(nvcc_ARCH) @CUDA_INCLUDES@ -I. @CUDA_CFLAGS@
 nvcc_FLAGS += $(JANSSON_INCLUDES)
+
+# Static compile cuda tk
+nvcc_FLAGS += -lnvrtc_static -lnvrtc-builtins_static -lnvptxcompiler_static -lcuda -lpthread
 
 # we're now targeting all major compute architectures within one binary.
 .cu.o:
